--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     overflow: hidden;
-    background-color:brown;
+    background-color:darkred;
     font-size: 20px;
     color: white; 
     display : flex;
