--- a/src/styles/Contatti.css
+++ b/src/styles/Contatti.css
@@ -8,6 +8,17 @@ h2 {
   font-family: 'Consolas';
 }
 
+.Servizi {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 40%;
+  border-radius: 40px; 
+  border: 2px solid white;
+}
+
 #default-button {
   font-family: 'Consolas';
   background-color: white;
@@ -29,11 +40,6 @@ h2 {
   min-width: 150px;
 }
 
-button:hover {
+#default-buttonutton:hover {
   background-color: #FEDD6E;
-}
-
-button:active {
-  box-shadow: black 2px 2px 0 0;
-  transform: translate(2px, 2px);
 }
