--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,3 +14,21 @@ h2 {
   font-size: medium;
   font-family: 'Consolas';
 }
+
+.footer{
+  margin-top: 1rem;
+  background-color: darksalmon;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
