--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,39 +1,4 @@
-h1 {
-    font-size: xx-large;
-    font-family: 'Consolas';
-}
-  
-h2 {
-    font-size: medium;
-    font-family: 'Consolas';
-}
-
-#default-button {
-    font-family: 'Consolas';
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 30px;
-    box-shadow: black 4px 4px 0 0;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 0 18px;
-    line-height: 50px;
-    text-align: center;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    min-width: 150px;
-}
-
-#default-button:hover {
-    background-color: #FEDD6E;
-}
-
-.logo {
+.About-logo {
     height: 20vmin;
     pointer-events: none;
 }
