--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,8 +1,8 @@
 .Navbar{
     overflow: hidden;
-    background-color:darkred;
+    background-color:#8C383A;
     font-size: 20px;
-    color: white; 
+    color: #F8F7DA; 
     display : flex;
     justify-content: center;
 }
@@ -20,8 +20,8 @@
 
 .Navbar a{
     text-decoration: none;
-    color: white;
+    color: #F8F7DA;
 }
 a:hover{
-    color: #FEDD6E;
+    color: #DCA349;
 }
