--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darksalmon;
+  background-color: #F8F7DA;
   font-family: 'Consolas';
   text-align: center;
   margin: auto;
@@ -17,7 +17,7 @@ h2 {
 
 .footer{
   margin-top: 1rem;
-  background-color: darksalmon;
+  background-color: #F8F7DA;
   position: fixed;
   bottom: 0;
   left: 0;
