--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -1,31 +1,10 @@
-#default-button {
-    font-family: 'Consolas';
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 30px;
-    box-shadow: black 4px 4px 0 0;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 0 18px;
-    line-height: 50px;
-    text-align: center;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    min-width: 150px;
-}
-
 #submit-button {
     background-color:white;
     font-family: 'Consolas';
-    border: 2px solid black;
+    border: 2px solid #8C383A;
     border-radius: 30px;
-    box-shadow: black 3px 3px 0 0;
-    color: black;
+    box-shadow: #8C383A 3px 3px 0 0;
+    color: #8C383A;
     cursor: pointer;
     display: inline-block;
     font-weight: 600;
@@ -38,7 +17,7 @@
 #delete-button {
     background-color:white;
     font-family: 'Consolas';
-    border: 2px solid black;
+    border: 2px solid #8C383A;
     border-radius: 50px;
     cursor: pointer;
     min-width: 30px;
@@ -49,13 +28,13 @@ button:hover {
 }
 
 button:active {
-    box-shadow: black 2px 2px 0 0;
+    box-shadow: #8C383A 2px 2px 0 0;
     transform: translate(2px, 2px);
 }
 
 input {
     font-family: 'Consolas';
-    border: 2px solid black;
+    border: 2px solid #8C383A;
     border-radius: 30px;
 }
   
